# SAP-RFC-Bridge

./: .env.template  .gitignore  Dockerfile  README.md  docker-build.sh  docker-compose.yaml  main.py  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yaml
routers/: call.py
utils/: sap_call.py  sap_read_table.py
