[tool.poetry]
name = "sap-rfc-bridge"
version = "0.1.0"
description = ""
authors = ["Subhadeep Das <consult.subhadeep@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.65.2"
uvicorn = "^0.14.0"
orjson = "^3.5.4"
pynwrfc = {url = "https://github.com/SAP/PyRFC/releases/download/2.0.6/pynwrfc-2.0.6-cp38-cp38-linux_x86_64.whl"}

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
